--- a/src/Css/home.css
+++ b/src/Css/home.css
@@ -1,30 +1,40 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    /* margin: 1px !important; */
 }
-.item1{
+body{
+    margin: 0 !important;
+    overflow-x: hidden !important;
+}
+/* .item1{
     border: 1px solid black;
+} */
+.item-inside{
+    border: 1px solid black;
+    margin: 5px !important;
 }
 .price-and-add{
     margin: 5px;
 }
 .menu{
     display: flex;
-    justify-content: space-between;
+    justify-content:stretch;
     align-items: center;
     padding: 10px;
     background: lightgray;
 }
-.cart {
+ .cart {
     text-align: end;
     margin-right: 2rem;
     align-items: center;
     position: relative;
+    visibility: hidden;
 }
   
+/*
 .cart-icon {
     width: 50px !important;
 }
-
 .cart p {
     position: absolute;
     width: 2rem;
@@ -40,4 +50,4 @@
     align-items: center;
     border-radius: 20px;
     background: transparent;
-}
+} */
